--- a/style.css
+++ b/style.css
@@ -152,6 +152,8 @@ font {
     height: 15px;
     color:white;
     font-size: .5rem;
+    display: flex;
+    align-items: center;
     margin: 2px;
     padding-inline: 4px;
 }
