--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ font {
     font-size: .5rem;
     display: flex;
     align-items: center;
+    justify-content: center;
     margin: 2px;
     padding-inline: 4px;
 }
